--- a/index.html
+++ b/index.html
@@ -509,11 +509,11 @@
                         </figure>
                         <div class="gallery-card-detail">
                           <a class="avatar-32" href="/">
-                          <img src="assets/images/img-user-01.jpg" alt="4달라">
-                        </a>
-                        <a class="username" href="/">유저1</a>
-                        <span class="order">1/461</span>
-                      </div>
+                            <img src="assets/images/img-user-01.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저1</a>
+                          <span class="order">1/461</span>
+                        </div>
                       </div>
                     </li>
                     <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-2">
@@ -524,11 +524,11 @@
                         </figure>
                         <div class="gallery-card-detail">
                           <a class="avatar-32" href="/">
-                          <img src="assets/images/img-user-02.jpg" alt="4달라">
-                        </a>
-                        <a class="username" href="/">유저2</a>
-                        <span class="order">2/461</span>
-                      </div>
+                            <img src="assets/images/img-user-02.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저2</a>
+                          <span class="order">2/461</span>
+                        </div>
                       </div>
                     </li>
                     <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-3">
@@ -539,11 +539,11 @@
                         </figure>
                         <div class="gallery-card-detail">
                           <a class="avatar-32" href="/">
-                          <img src="assets/images/img-user-03.jpg" alt="4달라">
-                        </a>
-                        <a class="username" href="/">유저3</a>
-                        <span class="order">3/461</span>
-                      </div>
+                            <img src="assets/images/img-user-03.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저3</a>
+                          <span class="order">3/461</span>
+                        </div>
                       </div>
                     </li>
                     <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-4">
@@ -554,11 +554,11 @@
                         </figure>
                         <div class="gallery-card-detail">
                           <a class="avatar-32" href="/">
-                          <img src="assets/images/img-user-default.png" alt="4달라">
-                        </a>
-                        <a class="username" href="/">유저4</a>
-                        <span class="order">4/461</span>
-                      </div>
+                            <img src="assets/images/img-user-default.png" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저4</a>
+                          <span class="order">4/461</span>
+                        </div>
                       </div>
                     </li>
                     <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-5">
@@ -569,15 +569,25 @@
                         </figure>
                         <div class="gallery-card-detail">
                           <a class="avatar-32" href="/">
-                          <img src="assets/images/img-user-default.png" alt="4달라">
-                        </a>
-                        <a class="username" href="/">유저5</a>
-                        <span class="order">5/461</span>
-                      </div>
+                            <img src="assets/images/img-user-default.png" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저5</a>
+                          <span class="order">5/461</span>
+                        </div>
                       </div>
                     </li>
                   </ol>
+                  <div class="user-gallery-controls sm-hidden">
+                    <button type="button" class="control-button is-prev" aria-label="이전 이미지">
+                      <i class="ic-chevron" aria-hidden></i>
+                    </button>
+                    <button type="button" class="control-button is-next" aria-label="다음 이미지">
+                      <i class="ic-chevron" aria-hidden></i>
+                    </button>
+                  </div>
                 </div>
+
+
                 <div class="user-gallery-thumbnail">
                   <ol class="thumbnail-list" role="tablist">
                     <li class="thumbnail-item" id="user-gallery-tab-1" role="tab">
@@ -1272,9 +1282,7 @@
             <div class="product-section-divider sm-only" aria-hidden></div>
           </div>
 
-          <section class="product-section product-recommendation" 
-          id="product-recommendation" 
-          role="tabpanel">
+          <section class="product-section product-recommendation" id="product-recommendation" role="tabpanel">
             <header class="product-section-header">
               <h1 class="title">비슷한 상품</h1>
             </header>
@@ -1323,7 +1331,7 @@
                       </div>
                       <span class="product-card-brand">플러스마이너스제로</span>
                       <h3 class="product-card-title">
-                        리플렉트 에코히터 4colors 
+                        리플렉트 에코히터 4colors
                       </h3>
 
                       <div class="product-card-price">
@@ -1417,7 +1425,7 @@
                     </div>
                   </a>
                 </li>
-              </ul>  
+              </ul>
             </div>
           </section>
           <div class="product-section-divider sm-only" aria-hidden></div>
