--- a/index.html
+++ b/index.html
@@ -452,6 +452,135 @@
           </form>
         </div>
       </div>
+
+      <div class="row">
+        <div class="col-sm-4">
+          <section class="product-section product-user-gallery">
+            <header class="product-section-header">
+              <h1 class="title">유저들의 스타일링샷</h1>
+              <strong class="badge" aria-label="461개">461</strong>
+              <a href="/" class="icon-button is-right" type="button" aria-label="더보기">
+                <i class="ic-chevron" aria-hidden></i>
+              </a>
+            </header>
+
+            <div class="product-section-content">
+              <div class="user-gallery is-mobile" role="region">
+                <div class="user-gallery-slider">
+                  <ol class="slider-list">
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-1">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-01.jpg" alt="">
+                          <figcaption class="visually-hidden">유저1 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="assets/images/img-user-01.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저1</a>
+                          <span class="order">1/461</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-2">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-02.jpg" alt="">
+                          <figcaption class="visually-hidden">유저2 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="assets/images/img-user-02.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저2</a>
+                          <span class="order">2/461</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-3">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-03.jpg" alt="">
+                          <figcaption class="visually-hidden">유저3 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="assets/images/img-user-03.jpg" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저3</a>
+                          <span class="order">3/461</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-4">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-04.jpg" alt="">
+                          <figcaption class="visually-hidden">유저4 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="assets/images/img-user-default.png" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저4</a>
+                          <span class="order">4/461</span>
+                        </div>
+                      </div>
+                    </li>
+                    <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-5">
+                      <div class="gallery-card">
+                        <figure class="gallery-card-image">
+                          <img src="./assets/images/img-review-05.jpg" alt="">
+                          <figcaption class="visually-hidden">유저5 님의 스타일링샷</figcaption>
+                        </figure>
+                        <div class="gallery-card-detail">
+                          <a class="avatar-32" href="/">
+                            <img src="assets/images/img-user-default.png" alt="4달라">
+                          </a>
+                          <a class="username" href="/">유저5</a>
+                          <span class="order">5/461</span>
+                        </div>
+                      </div>
+                    </li>
+                  </ol>                  
+                </div>
+
+
+                <div class="user-gallery-thumbnail">
+                  <ol class="thumbnail-list" role="tablist">
+                    <li class="thumbnail-item" id="user-gallery-tab-1" role="tab">
+                      <button type="button">
+                        <img src="./assets/images/img-review-01.jpg" alt="01번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-2" role="tab">
+                      <button type="button">
+                        <img src="./assets/images/img-review-02.jpg" alt="02번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-3" role="tab">
+                      <button type="button">
+                        <img src="./assets/images/img-review-03.jpg" alt="03번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-4" role="tab">
+                      <button type="button">
+                        <img src="./assets/images/img-review-04.jpg" alt="04번 사진">
+                      </button>
+                    </li>
+                    <li class="thumbnail-item" id="user-gallery-tab-5" role="tab">
+                      <button type="button">
+                        <img src="./assets/images/img-review-05.jpg" alt="05번 사진">
+                      </button>
+                    </li>
+                  </ol>
+                </div>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
     </div>
 
     <div class="product-tab">
@@ -498,7 +627,7 @@
             </header>
 
             <div class="product-section-content">
-              <div class="user-gallery" role="region">
+              <div class="user-gallery is-desktop" role="region">
                 <div class="user-gallery-slider">
                   <ol class="slider-list">
                     <li class="slider-item" role="tabpanel" aria-labelledby="user-gallery-tab-1">
