--- a/index.html
+++ b/index.html
@@ -453,8 +453,9 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="row sm-only">
         <div class="col-sm-4">
+          <div class="product-section-divider" aria-hidden></div>
           <section class="product-section product-user-gallery">
             <header class="product-section-header">
               <h1 class="title">유저들의 스타일링샷</h1>
@@ -579,6 +580,7 @@
               </div>
             </div>
           </section>
+          <div class="product-section-divider is-big" aria-hidden></div>
         </div>
       </div>
     </div>
@@ -617,7 +619,7 @@
       <div class="row">
         <div class="col-sm-4 col-lg-8">
 
-          <section class="product-section product-user-gallery">
+          <section class="product-section product-user-gallery sm-hidden">
             <header class="product-section-header">
               <h1 class="title">유저들의 스타일링샷</h1>
               <strong class="badge" aria-label="461개">461</strong>
@@ -1163,6 +1165,7 @@
               </div>
             </div>
           </section>
+          <div class="product-section-divider"></div>
 
           <!-- 리뷰가 0개인 경우 -->
           <!-- <section class="product-section product-review" id="product-review" role="tabpanel">
