--- a/index.html
+++ b/index.html
@@ -1564,7 +1564,7 @@
         </div>
 
         <div class="col-lg-4 lg-only">
-          <form class="floating-order-form" action="/" method="POST">
+          <form class="floating-order-form order-form" action="/" method="POST">
             <div class="order-inputs">
               <div class="select-group is-active">
                 <select class="form-select" id="floating-order-form-select-1" required>
@@ -1623,7 +1623,6 @@
                     </footer>
                   </div>
                 </li>
-
               </ul>
             </div>
 
