--- a/index.html
+++ b/index.html
@@ -2087,7 +2087,7 @@
   </aside>
 
   <!-- 북마크에 추가 했을 때 -->
-  <aside class="bookmark-teast">
+  <aside class="bookmark-toast">
     <h1 class="bookmark-title">스크랩했습니다.</h1>
     <button class="close-button" type="button" aria-label="닫기">
       <i class="ic-close" aria-hidden></i>
@@ -2099,12 +2099,12 @@
   </aside>
 
   <!-- 북마크에서 삭제 했을 때 -->
-  <aside class="bookmark-teast">
+  <!-- <aside class="bookmark-toast">
     <h1 class="bookmark-title">스크랩북에서 삭제했습니다.</h1>
     <button class="close-button" type="button" aria-label="닫기">
       <i class="ic-close" aria-hidden></i>
     </button>
-  </aside>
+  </aside> -->
 
   <div class="overlay" aria-hidden></div>
 
