--- a/index.html
+++ b/index.html
@@ -2113,6 +2113,7 @@
   <script src="js/sidebar.js"></script>
   <script src="js/sidebar-drawer.js"></script>
   <script src="js/section-header.js"></script>
+  <script src="js/search-modal.js"></script>
 </body>
 
 </html>
