--- a/index.html
+++ b/index.html
@@ -967,7 +967,7 @@
                     <footer class="review-card-footer">
                       <button class="btn-outlined btn-32" type="button">도움이 돼요</button>
                       <p>
-                        <strong><span>7</span>명</strong>에게 도움이 되었습니다.
+                        <strong><span>1</span>명</strong>에게 도움이 되었습니다.
                       </p>
                     </footer>
                   </article>
@@ -2117,6 +2117,7 @@
   <script src="js/order-cta.js"></script>
   <script src="js/my-menu.js"></script>
   <script src="js/gnb-search.js"></script>
+  <script src="js/review.js"></script>
 </body>
 
 </html>
