--- a/index.html
+++ b/index.html
@@ -2109,6 +2109,7 @@
   <div class="overlay" aria-hidden></div>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js" integrity="sha512-WFN04846sdKMIP5LKNphMaWzU7YpMyCU245etK3g/2ARYbPK9Ub18eG+ljU96qKRCWh+quCY7yefSmlkQw1ANQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <script src="js/carousels.js"></script>
   <script src="js/sidebar.js"></script>
   <script src="js/sidebar-drawer.js"></script>
@@ -2119,6 +2120,7 @@
   <script src="js/gnb-search.js"></script>
   <script src="js/review.js"></script>
   <script src="js/product-tab.js"></script>
+  
 </body>
 
 </html>
